			       =================

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	Sections headed '[Incompat <version>]' and '[Major <version>]'
	are particularly important.  They describe changes that are
	incompatible with earlier releases or are significantly
	different.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

-------------------------------------------------------------------------------

	2005-06-08

	* Fix bug in transactional auto-detection that caused recovery to
	  fail if the environment was in PANIC state.
	  (Reported by Andrey Chernov.)

	2005-06-07

	* Additional unicode support:
	   Added global variable encoding { E_RAW, E_UNICODE }
	   Added --unicode=yes/no options for bogolexer and bogoutil.
	   Added meta-token .ENCODING { 1=raw, 2=unicode }

	2005-06-06

	* Removed extra SunOS 4.1.x support code.

	2005-05-31

	* Support systems with GNU iconv or separate libiconv.

	* Split up acinclude.m4 into separate files under m4/.

	2005-05-29

	* Refactor charset and unicode functions into charset.[ch],
          convert_charset.[ch], and conver_unicode.[ch]

	* Add configure and runtime options to select charset and/or
	  unicode character conversion:

	  ./configure                   - runtime selection
	  ./configure --enable-unicode  - unicode only
	  ./configure --disable-unicode - charset only

	  bogofilter --unicode=yes      - use unicode conversion
	  bogofilter --unicode=no       - use charset conversion

0.94.14	2005-06-08

	* Fix bug in transactional auto-detection that caused recovery to
	  fail if the environment was in PANIC state.
	  (Reported by Andrey Chernov.)

	2005-05-29

	* Consistency: Skip test if Berkeley DB supports shared environments
	  when ./configure --disable-transactions is run, as shared
	  environments are only needed for transactions.
	  (Fixes SunOS portability problem reported by Charles Hewson.)

0.94.13	2005-05-28

	* Minor cleanups to iconv code.

	2005-05-26
